# Watcher

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_user_ratings.sql  003_embeddings.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  recommend.rs  tmdb.rs
