[package]
name = "watcher"
version = "0.1.0"
edition = "2021"
description = "Local movie & TV show tracker with AI-powered recommendations"

[lib]
name = "watcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = "0.23"
hf-hub = { version = "1.0.0-rc.1", features = ["blocking"] }

